--- a/example/styles.css
+++ b/example/styles.css
@@ -4,16 +4,17 @@ body {
 .card {
     height: 450px;
     max-width: 500px;
-    margin: 0 auto;
+    margin: 0 auto 2em;
     overflow: hidden;
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, .2);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, .2);
 }
 .stack {
-    background: rgba(0, 0, 0, .8);
+    background: #006c7f;
     color: white;
     padding: .3em .5em;
-    border-bottom: solid 1px rgba(255, 255, 255, .1);
+    border-top: solid 1px rgba(255, 255, 255, .2);
+    border-bottom: solid 1px rgba(255, 255, 255, .2);
 }
 .inner {
     padding: 1em;
