--- a/example/styles.css
+++ b/example/styles.css
@@ -5,7 +5,8 @@ body {
     height: 450px;
     max-width: 500px;
     margin: 0 auto 2em;
-    overflow: hidden;
+    /*overflow: hidden;*/
+    
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, .2);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, .2);
 }
